<resources>
    <string name="app_name">Wits E-Learning Platform</string>

    <string name="welcome">Welcome</string>

    <string name="home">Home</string>
    <string name="my_courses">My Courses</string>
    <string name="browse">Browse</string>
    <string name="create">Create</string>
    <string name="log_out">Log Out</string>

    <string name="student_name">Student Name</string>
    <string name="course_name">Course Name</string>
    <string name="course_code">Course Code</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="featured_courses">Featured Courses</string>
</resources>
